# graciela

./: .gitignore  Archivos.txt  Makefile  README.md  brewbootstrap.sh  chao.gcl  gacela.cabal  graciela.cabal  hola.gcl  prueba.gcl  stack.yaml
Orientacion/: Archivos.txt  Compilar.txt  Instalacion.txt  README install_graciela.txt
calculadora/: Lexer.hs  Main.hs  Parser.hs  Tabla.hs  Token.hs  calculator2.hs  expressionParser.hs
calculadora/V1.0/: expressionParser.hs
calculadora/casos/: caso1.gcl  caso2.gcl
doc/: Documentacion.md  FIRSTS & FOLLOWS  Gramatica LL  Gramatica LR  Lexer  Observaciones.md  Referencias.md  UTF-8  comentarios.md  informe-primera-etapa.mkdw  informe-segunda-etapa.mkdw  monascal.md
doc/Etapa 1/: Makefile  beamer.tex  etapa1.md
doc/Etapa 2/: Verano.md  beamer.tex  etapa2.md
doc/Etapa 3/: CollectionOperators.md  Referencias.md  etapa3.md
doc/Etapa 3/Libro/: 0-Informe.dvi  0-Informe.tex  1-Caratula.tex  10-Simbolosabreviaturas.tex  11-Introduccion.tex  12-Capitulo1.tex  13-Capitulo2.tex  14-Capitulo3.tex  15-Capitulo4.tex  16-Capitulo5.tex  17-Conclusiones.tex  18-Bibliografia.tex  2-Portada.tex  3-Acta.tex  4-Resumen.tex  5-Dedicatoria.tex  6-Agradecimientos.tex  Makefile
doc/gacela/: ADTImplementaciones.htm  Acciones.htm  Gramatica.txt  LangAssign.htm  LangDo.htm  LangRandom.htm  LangSeq.htm  OtrasAcciones.htm  TipoBooleano.htm  TipoDoble.htm  TipoScreen.htm  TipoString.htm  TiposAlgebraicos.htm  documento_lenguaje.md  usbbots.gcl
doc/gacela/especificacion_formal/: Especificacion_formal_de_gacela.mkdw
doc/gacela/htm/: Constantes.htm  Funciones.htm  FuncionesProcedimientosPredefinidos.htm  LangBlock.htm  LangDecl.htm  LangIf.htm  LangTriple.htm  Parametros.htm  Procedimientos.htm  Programas.htm  Recursion.htm  Terminacion.htm
doc/gacela/material_de_apoyo/: links.txt
doc/gcl/: dijkstra_discipline_programming_1976.djvu  paginas.txt
doc/gcl/especificación_formal/: especificacion_formal_gcl.html  especificacion_formal_gcl.mkdw
doc/graciela/: diseno.md
examples/: .pisano.gcl.swp  Conjunto.gcl  Dicc.gcl  Diccionario.gcl  Graph.gcl  List.gcl  SearchTree.gcl  SeparationLogic.gcl  Tree.gcl  ack.gcl  ack2.gcl  any.gcl  arrayS.gcl  baggy.gcl  buscar.gcl  carlos.gcl  casoViejo.gcl  dec12.gcl  mal.gcl  mmm.gcl  mp.hs  nuevo.gcl  p.gcl  parserTests.gcl  pisano.gcl  pragma.gcl  queue.gcl  quickSort.gcl  ranges.gcl  refref.gcl  separacion.gcl  sizes.gcl
examples/Casos de Errores/: argumentoNombre.gcl  argumentoTipo.gcl  check1.gcl  noDeclaracion.gcl  reDeclaracion.gcl
examples/Ejercicios/: 5-1  5-1.gcl  5-2.gcl  6-1-2.gcl  6-1.gcl  7-1-0.bc  BubbleSort(0).gcl  BubbleSort(1).bc  InsertionSort.bc  SelectionSort.  a  auxiliar  fibonacci  fibonacci.gcl  gacelac  sortInput.txt
examples/UTF8/: Dicc.gcl  Diccionario.gcl  buscar.gcl  pisano.gcl
graciela-1/doc/graciela/: diseno.md
graciela-1/doc/informes/: informe-primera-etapa.md
graciela-1/examples/: casoprueba.gcl  quickSort.gcl
graciela-2/: compile.sh  ideas.md  informe1.md  monascal.md
graciela-2/examples/: Dicc.gcl  Diccionario.agcl  buscar.gcl  parserTests.gcl
highlight/vim/: graciela.vim
source/: AST.hs  ASTtype.hs  Aborts.hs  Codegen.hs  CodegenState.hs  Contents.hs  Declarations.hs  Entry.hs  Error.hs  Expression.hs  Graciela.hs  Graciela.hs.bak  IR.hs  Lexer.hs  Limits.hs  Location.hs  Main.hs  Makefile  MyParseError.hs  MyTypeError.hs  Parser.hs  ParserError.hs  ParserState.hs  ParserType.hs  Print.hs  ReduceAST.hs  SourcePos.hs  State.hs  SymbolTable.hs  Tabla.hs  TablaVieja.hs  Token.hs  Token.hs~  TokenParser.hs  Type.hs  TypeError.hs  TypeState.hs  VerTypes.hs  a.out  ack  (+12 more)
source (original)/: Entry.hs  Graciela.hs  Lexer.hs  Limits.hs  ReduceAST.hs  Token.hs  Treelike.hs  TypeError.hs  graciela.cabal
source (original)/AST/: Definition.hs  Expression.hs  Instruction.hs  Object.hs  Struct.hs
source (original)/LLVM/: Declaration.hs  Expression.hs  Instruction.hs  State.hs  Struct.hs  Type.hs
source (original)/Parser/: Assertion.hs  Declaration.hs  Definition.hs  ExprM.hs  Expression.hs  Instruction.hs  Prim.hs  Recovery.hs  Type.hs
source/AST/: Declaration.hs  Definition.hs  Expression.hs  Instruction.hs  Object.hs  Program.hs  Struct.hs  Type.hs
source/C/: graciela-lib.c  libgraciela.c
source/Haskell/: Common.hs  Entry.hs  Error.hs  Lexer.hs  Location.hs  Main.hs  Pragma.hs  Sentence.hs  SymbolTable.hs  Token.hs  Treelike.hs  Type.hs  cosa.gcl  erl_crash.dump  graciela.cabal  hola  k  prueba.hs
source/Haskell/AST/: Object.hs  (+8 more)
source/LLVM/: Abort.hs  Aborts.hs  Codegen.hs  CodegenState.hs  Declaration.hs  Definition.hs  Expression.hs  Instruction.hs  Monad.hs  Program.hs  Quantification.hs  Quantifier.hs  State.hs  Struct.hs  Type.hs  untitled.hs
source/Parser/: ADT.hs  Assertion.hs  Assertions.hs  Declaration.hs  Declarations.hs  Definition.hs  ExprM.hs  Expression.hs  Instruction.hs  Instructions.hs  Monad.hs  Operator.hs  ParserType.hs  Prim.hs  Procedure.hs  Procedures.hs  Program.hs  Program.hs.bak  Recovery.hs  Recovery.hs.bak  State.hs  TAD.hs  Token.hs  TokenParser.hs  Type.hs
source/casos/: casoprueba.gcl  quickSortUTF-8.gcl  sumaCuadradosImpares.gcl  sumaCuadradosImparesUTF-8.gcl
source/graciela-abstract-lib/: README
src/Bash/: rungraciela
src/C/: libgraciela.c
src/Haskell/: Cola  Common.hs  Entry.hs  Error.hs  Lexer.hs  Main.hs  OS.hs  Pragma.hs  Test.hs  Token.hs  Treelike.hs  ghc.rb  graciela.cabal  hola  test.sh
sublime-highlight/Graciela/: Graciela.YAML-tmLanguage  Graciela.tmLanguage
testset/: Cola.expout  Cola.gcl  Cola.in  Conjunto.gcl  Graph.gcl  Shared.hs  Test.hs  Tree.gcl
testset/ArbolBusqueda/: ArbolBusqueda.gcl  Multiset.gcl  in1
testset/Cola/: Cola.gcl  Cola.hs  ColaEnlazada.gcl  _err  in1  in2  out1  out2
testset/Diccionario/: Dicc.gcl  Diccionario.gcl  Main.gcl
testset/Grafo/: Grafo.gcl
testset/InBool/: InBool.gcl
testset/Lista/: Lista.gcl
testset/StringTest/: Memory.gcl  ReadFile.gcl  String.gcl  StringTest.gcl  Tokens.gcl
testset/TempVar/: TempVar.gcl
testset/TeoriaConjuntos/: TeoriaConjuntos.gcl
(+218 files in other folders)
